Add a command for user to define shortcuts