@@ -8,6 +8,8 @@ import static seedu.address.logic.parser.CliSyntax.PREFIX_NAME;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_PHONE;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_TAG;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.logic.commands.exceptions.CommandException;
@@ -19,7 +21,7 @@ import seedu.address.model.person.Person;
  */
 public class AddCommand extends Command {
 
-    public static final List<String> COMMAND_WORDS = List.of(new String[]{"add", "a"});
+    public static final List<String> COMMAND_WORDS = new ArrayList<String>(Arrays.asList("add", "a"));
 
     public static final String MESSAGE_USAGE = COMMAND_WORDS + ": Adds a person to the address book. "
             + "Parameters: "
