@@ -2,6 +2,8 @@ package seedu.address.logic.commands;
 
 import static java.util.Objects.requireNonNull;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.AddressBook;
@@ -12,7 +14,7 @@ import seedu.address.model.Model;
  */
 public class ClearCommand extends Command {
 
-    public static final List<String> COMMAND_WORDS = List.of(new String[]{"clear", "c"});
+    public static final List<String> COMMAND_WORDS = new ArrayList<String>(Arrays.asList("clear", "c"));
     public static final String MESSAGE_SUCCESS = "Address book has been cleared!";
 
     @Override
