@@ -2,6 +2,8 @@ package seedu.address.logic.commands;
 
 import static java.util.Objects.requireNonNull;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.commons.core.Messages;
@@ -15,7 +17,7 @@ import seedu.address.model.person.Person;
  */
 public class DeleteCommand extends Command {
 
-    public static final List<String> COMMAND_WORDS = List.of(new String[]{"delete", "d"});
+    public static final List<String> COMMAND_WORDS = new ArrayList<String>(Arrays.asList("delete", "d"));
 
     public static final String MESSAGE_USAGE = COMMAND_WORDS
             + ": Deletes the person identified by the index number used in the displayed person list.\n"
