@@ -3,6 +3,8 @@ package seedu.address.logic.commands;
 import static java.util.Objects.requireNonNull;
 import static seedu.address.model.Model.PREDICATE_SHOW_ALL_PERSONS;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.Model;
@@ -14,7 +16,7 @@ import seedu.address.model.Model;
  */
 public class ListCommand extends Command {
 
-    public static final List<String> COMMAND_WORDS = List.of(new String[]{"list", "l"});
+    public static final List<String> COMMAND_WORDS = new ArrayList<String>(Arrays.asList("list", "l"));
 
     public static final String MESSAGE_SUCCESS = "Listed all persons";
 
