@@ -2,6 +2,8 @@ package seedu.address.logic.commands;
 
 import static java.util.Objects.requireNonNull;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.commons.core.Messages;
@@ -18,7 +20,7 @@ import seedu.address.model.tag.Tag;
  */
 public class ShortcutCommand extends Command {
 
-    public static final List<String> COMMAND_WORDS = List.of(new String[]{"shortcut", "s"});
+    public static final List<String> COMMAND_WORDS = new ArrayList<String>(Arrays.asList("shortcut", "s"));
 
     public static final String MESSAGE_USAGE = COMMAND_WORDS
             + ": Adds a shortcut to a command.\n"
